<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#8d8d8d" />

    <TextView
        android:id="@+id/last_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_time"
        android:textColor="#8d8d8d" />

    <TextView
        android:id="@+id/user_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/times"
        android:textColor="#8d8d8d" />

    <TextView
        android:id="@+id/rebate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rebate"
        android:textColor="#8d8d8d" />

</LinearLayout>