<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/home_shape"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/common_title_back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/common_title_back_black" />

        <TextView
            android:id="@+id/common_title_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="用户详情"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/update_img"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@mipmap/update" />

    </FrameLayout>

    <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_title" />


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"

        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id" />


    <TextView
        android:id="@+id/total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/total_amount"

        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <TextView
        android:id="@+id/user_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/amount"

        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount" />


    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"

        android:text="@string/phone"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_amount" />


    <TextView
        android:id="@+id/last_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/last_time"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone" />


    <TextView
        android:id="@+id/user_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"


        android:text="@string/times"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_time" />


    <TextView
        android:id="@+id/tv_rebate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/rebate"

        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_times" />

    <TextView
        android:id="@+id/tv_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="到店时间记录："

        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rebate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_times"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_times" />
</androidx.constraintlayout.widget.ConstraintLayout>